[project]
name = "raindrop-to-gsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api>=0.1.12",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
