[project]
name = "raindrop-to-gsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "google-api>=0.1.12",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "mypy>=1.17.0",
    "pysen>=0.11.0",
    "pytest>=8.3.4",
    "pyzotero>=1.6.8",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.9.1",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F"]
ignore = []
# ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

ignore_missing_imports = true

